fix: resolve compilation and test failures from review fixes
- SanctionsScreener: use bigram-based bloom filter for fuzzy tolerance
- RuleEngineJob: fix string interpolation syntax ($$ -> $)
- CaseController/ReportController: replace Map.of() with Collections.singletonMap() for Java 8
- UserProfileJob: restore RiskFactors and calculateRiskScore/riskLevel methods
- test-config.conf: add checkpoint section
- SanctionsScreenerSpec: update fuzzy match test expectations
- RuleEngineSpec: update rule count from 2 to 5

Co-Authored-By: Claude Opus 4.7 <noreply@anthropic.com>